added css styling

--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
   </head>
   <body>
     <div class="container-fluid">
-      <!-- 1- making slider with javascript left for section silder and circle section  -->
-
       <!--slider section-->
       <div class="row">
-        <div class="col-sm-12 p-0">
-          <img src="./img/Slider .png" alt="main picture" class="img-fluid" />
+        <div class="col-lg-12 p-0">
+          <img src="./img/Slider .png" alt="main picture" class="img-fluid slider-img" />
         </div>
       </div>
-      <!-- circle section -->
-      <div class="d-flex justify-content-center">
+      <!-- circle section responsive left -->
+      <div class="circle-box d-flex justify-content-center">
         <div class="off-circle"></div>
         <div class="off-circle"></div>
         <div class="off-circle on-circle"></div>
@@ -33,9 +31,9 @@
       </div>
 
       <!-- logo section -->
-      <div class="row m-4">
+      <div class="row gx-lg-0 mt-lg-4 d-lg-flex justify-content-lg-evenly">
         <div
-          class="col-1 d-flex flex-column justify-content-center align-items-center"
+          class="col-lg-1 d-flex flex-column justify-content-center align-items-center"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -51,58 +49,34 @@
             />
           </svg>
         </div>
-        <div class="col">
-          <img
-            src="./img/psn.png"
-            alt="main picture"
-            class="w-75 rounded-circle"
-          />
+        <div class="col-lg-1">
+          <img src="./img/psn.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col">
+        <div class="col-lg-1">
           <img
             src="./img/pngaaa.com-295172.png"
             alt="main picture"
-            class="w-75 rounded-circle"
+            class="w-100"
           />
         </div>
-        <div class="col">
-          <img
-            src="./img/steam.png"
-            alt="main picture"
-            class="w-75 rounded-circle"
-          />
+        <div class="col-lg-1">
+          <img src="./img/steam.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col">
-          <img
-            src="./img/spotify 2.png"
-            alt="main picture"
-            class="w-75 rounded-circle"
-          />
+        <div class="col-lg-1">
+          <img src="./img/spotify 2.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col">
-          <img
-            src="./img/origin 2.png"
-            alt="main picture"
-            class="w-75 rounded-circle"
-          />
+        <div class="col-lg-1">
+          <img src="./img/origin 2.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col">
-          <img
-            src="./img/google play2.png"
-            alt="main picture"
-            class="w-75 rounded-circle"
-          />
+        <div class="col-lg-1">
+          <img src="./img/google play2.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col">
-          <img
-            src="./img/itunes2.png"
-            alt="main picture"
-            class="w-75 rounded-circle"
-          />
+        <div class="col-lg-1">
+          <img src="./img/itunes2.png" alt="main picture" class="w-100" />
         </div>
 
         <div
-          class="col d-flex flex-column justify-content-center align-items-center"
+          class="col-lg-1 d-flex flex-column justify-content-center align-items-center"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
