--- a/index.html
+++ b/index.html
@@ -18,22 +18,20 @@
       <!--slider section-->
       <div class="row">
         <div class="col-lg-12 p-0">
-          <img src="./img/Slider .png" alt="main picture" class="img-fluid slider-img" />
+          <img
+            src="./img/Slider .png"
+            alt="main picture"
+            class="img-fluid slider-img"
+          />
         </div>
-      </div>
-      <!-- circle section responsive left -->
-      <div class="circle-box d-flex justify-content-center">
-        <div class="off-circle"></div>
-        <div class="off-circle"></div>
-        <div class="off-circle on-circle"></div>
-        <div class="off-circle"></div>
-        <div class="off-circle"></div>
       </div>
 
       <!-- logo section -->
-      <div class="row gx-lg-0 mt-lg-4 d-lg-flex justify-content-lg-evenly">
+      <div
+        class="row gx-lg-0 gx-0 gx-md-2 mt-3 mt-md-3 mt-lg-4 d-flex justify-content-evenly justify-content-md-evenly justify-content-lg-evenly"
+      >
         <div
-          class="col-lg-1 d-flex flex-column justify-content-center align-items-center"
+          class="col-1 col-md-2 col-lg-1 d-flex flex-column justify-content-center align-items-center"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -49,34 +47,34 @@
             />
           </svg>
         </div>
-        <div class="col-lg-1">
+        <div class="col-1 col-md-1 col-lg-1">
           <img src="./img/psn.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col-lg-1">
+        <div class="col-1 col-md-1 col-lg-1">
           <img
             src="./img/pngaaa.com-295172.png"
             alt="main picture"
             class="w-100"
           />
         </div>
-        <div class="col-lg-1">
+        <div class="col-1 col-md-1 col-lg-1">
           <img src="./img/steam.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col-lg-1">
+        <div class="col-1 col-md-1 col-lg-1">
           <img src="./img/spotify 2.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col-lg-1">
+        <div class="col-1 col-md-1 col-lg-1">
           <img src="./img/origin 2.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col-lg-1">
+        <div class="col-1 col-md-1 col-lg-1">
           <img src="./img/google play2.png" alt="main picture" class="w-100" />
         </div>
-        <div class="col-lg-1">
+        <div class="col-1 col-md-1 col-lg-1">
           <img src="./img/itunes2.png" alt="main picture" class="w-100" />
         </div>
 
         <div
-          class="col-lg-1 d-flex flex-column justify-content-center align-items-center"
+          class="col-1 col-md-1 col-lg-1 d-flex flex-column justify-content-center align-items-center"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -93,57 +91,71 @@
           </svg>
         </div>
       </div>
+
       <!-- button section -->
-      <div class="row d-flex justify-content-center btn-box gx-0 mt-5">
-        <div class="col-2">
+      <div
+        class="row d-flex justify-content-center btn-box gx-0 gx-lg-0 gx-md-0 mt-4 mt-md-5 mt-lg-5"
+      >
+        <div class="col-2 col-md-2 col-lg-2">
           <button class="physical-btn w-100">Physical</button>
         </div>
-        <div class="col-2">
+        <div class="col-2 col-md-2 col-lg-2">
           <button class="digital-btn w-100">Digital</button>
         </div>
       </div>
+
       <!-- img section -->
-      <div class="row d-flex justify-content-center gx-0 mt-5">
-        <div class="col-4 d-flex justify-content-center">
-          <img src="./img/D.png" alt="" class="w-75" />
+      <div
+        class="row d-flex justify-content-center gx-2 gx-md-2 gx-lg-3 mt-3 mt-md-4 mt-lg-5 mb-md-3"
+      >
+        <div class="col-5 col-md-5 col-lg-4 d-flex justify-content-center">
+          <img src="./img/D.png" alt="" class="w-100" />
         </div>
-        <div class="col-4">
-          <img src="./img/ol.png" alt="" class="w-75" />
+        <div class="col-5 col-md-5 col-lg-4">
+          <img src="./img/ol.png" alt="" class="w-100" />
         </div>
       </div>
       <!-- Clothing and Accessories section -->
-      <div class="row gx-2 mt-5 d-flex justify-content-center">
-        <div class="col-1">
+      <div
+        class="row gx-1 gx-md-2 gx-lg-2 mt-4 mt-md-5 d-flex justify-content-center clothing-accessories-box"
+      >
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 20.png" alt="" class="w-100" />
         </div>
-        <div class="col-1">
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 21.png" alt="" class="w-100" />
         </div>
-        <div class="col-1">
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 22.png" alt="" class="w-100" />
         </div>
-        <div class="col-1">
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 21 (1).png" alt="" class="w-100" />
         </div>
-        <div class="col-2 clothing-accessories-box">
+        <div
+          class="col-2 col-md-2 col-lg-2 d-flex align-items-center justify-content-center"
+        >
           <h1>Clothing <br />& <br />Accessories</h1>
         </div>
       </div>
       <!-- action figures section 1 -->
-      <div class="row gx-2 mt-4 d-flex justify-content-center">
-        <div class="col-1">
+      <div
+        class="row gx-1 gx-md-2 gx-lg-2 mt-3 mt-md-5 mt-lg-5 d-flex justify-content-center action-figures-box"
+      >
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 17.png" alt="" class="w-100" />
         </div>
-        <div class="col-1">
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 18.png" alt="" class="w-100" />
         </div>
-        <div class="col-1">
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 19.png" alt="" class="w-100" />
         </div>
-        <div class="col-1">
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 18 (1).png" alt="" class="w-100" />
         </div>
-        <div class="col-2 action-figures-box">
+        <div
+          class="col-2 col-md-2 col-lg-2 d-flex flex-column align-items-center justify-content-center"
+        >
           <h1>Action Figures</h1>
           <p>
             هیروها تو داستان ها نیستن
@@ -153,20 +165,24 @@
         </div>
       </div>
       <!-- action figures section 2 -->
-      <div class="row gx-2 mt-1 d-flex justify-content-center">
-        <div class="col-1">
+      <div
+        class="row gx-1 gx-md-2 gx-lg-2 mt-1 mt-md-5 mt-lg-5 d-flex justify-content-center"
+      >
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 20 (1).png" alt="" class="w-100" />
         </div>
-        <div class="col-1">
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 21 (3).png" alt="" class="w-100" />
         </div>
-        <div class="col-1">
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 22 (1).png" alt="" class="w-100" />
         </div>
-        <div class="col-1">
+        <div class="col-2 col-md-2 col-lg-2">
           <img src="./img/Ellipse 21 (2).png" alt="" class="w-100" />
         </div>
-        <div class="col-2 d-flex align-items-center justify-content-center">
+        <div
+          class="col-2 col-md-2 col-lg-2 d-flex flex-column align-items-center justify-content-center"
+        >
           <button class="look-all-btn">مشاهده همه</button>
         </div>
       </div>
@@ -181,18 +197,20 @@
       <!-- footer section -->
       <div class="footer-box">
         <!-- footer 1 -->
-        <div class="row gx-2 d-flex justify-content-center text-center">
-          <div class="col-4">
+        <div
+          class="row gx-2 gx-md-2 gx-lg-0 mb-1 d-flex justify-content-center text-center"
+        >
+          <div class="col-4 col-md-4">
             <span>
               تماس با ما
               <br />
               چطور خرید کنم؟
             </span>
           </div>
-          <div class="col-4">
+          <div class="col-4 col-md-4">
             <h1>trendyol</h1>
           </div>
-          <div class="col-4">
+          <div class="col-4 col-md-4">
             <span>
               درباره ما
               <br />
@@ -201,8 +219,8 @@
           </div>
         </div>
         <!-- footer 2 -->
-        <div class="row gx-0 d-flex justify-content-center">
-          <div class="col-1 d-flex justify-content-center">
+        <div class="row gx-3 d-flex justify-content-center">
+          <div class="col-1 col-md-1 col-lg-1 d-flex justify-content-center">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="25"
@@ -216,7 +234,7 @@
               />
             </svg>
           </div>
-          <div class="col-1 d-flex justify-content-center">
+          <div class="col-1 col-md-1 col-lg-1 d-flex justify-content-center">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="25"
@@ -230,7 +248,7 @@
               />
             </svg>
           </div>
-          <div class="col-1 d-flex justify-content-center">
+          <div class="col-1 col-md-1 col-lg-1 d-flex justify-content-center">
             <svg
               xmlns="http://www.w3.org/2000/svg"
               width="25"
@@ -246,8 +264,8 @@
           </div>
         </div>
         <!-- footer 3 -->
-        <div class="row d-flex mt-3 justify-content-center text-center">
-          <div class="col-3">
+        <div class="row mt-3 mt-lg-3 d-flex justify-content-center text-center">
+          <div class="col-3 col-lg-3">
             <span>
               Copyright © 2023 Eymur Inc.
               <br />
